+ Fix lỗi chat hiện ở tất cả các QA

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
@@ -80,7 +80,7 @@
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat" data-toggle="modal" data-target="#modal-default">Hồ sơ</a>
+                                        <a href="#" class="btn btn-default btn-flat" data-toggle="modal" data-target="#modal-default">Đổi mật khẩu</a>
                                     </div>
                                     <div class="pull-right">
                                         <a href="@Url.Action("LogOff","Account")" class="btn btn-default btn-flat">Đăng xuất</a>
