+ Sửa lỗi không up được file

--- a/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProject-EIP/Views/Shared/_Layout.cshtml
@@ -141,7 +141,7 @@
                                     RadiusTheme
                                 </a>
                             </p>
-                            <div class="footer-social">
+                            @*<div class="footer-social">
                                 <ul>
                                     <li>
                                         <a href="#" title="facebook">
@@ -179,7 +179,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
