--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -88,7 +88,7 @@
             var listVoting = JSON.parse(localStorage.getItem("listVotingInteract"));
             if (listVoting !== null) {
                 var votingInteractTmp = listVoting.find(v => v.VotingId === votingId);
-                if (votingInteractTmp !== null) {
+                if (votingInteractTmp != null) {
                     var votingOptionId = parseInt(votingInteractTmp.VotingOptionId);
                     $('input.group-poll[value="' + votingOptionId + '"]').prop('checked', true);
                     $('input.group-poll').prop('disabled', 'disabled');
@@ -109,47 +109,7 @@
             showVotingResult(selectOption, votingId, true);
 
 
-            //$.ajax({
-            //    url: urlApi + '/api/voting/ChangeNumberOfVoting',
-            //    method: "POST",
-            //    data: {
-            //        VotingOptionId: select,
-            //        VotingId: $('#txt-voting-id').val()
-            //    },
-            //    success: function (data) {
-            //        $('#result').load(' #result', function () {
-            //            $('#btn-vote').css('display', 'none');
-            //            $('#thanks').css('display', 'show');
-            //            $('#thanks').text("Cảm ơn vì đã bình chọn!");
-            //            $('.result').css('display', 'block');
-
-            //            var resultTemplate = $('#progress-bar-result-template').clone();
-            //            for (var i = 0; i < data.data.length; i++) {
-            //                resultTemplate.find('.progress-bar').attr('data-transitiongoal', data.data[i]);
-            //                $('#result-voting-section').append(resultTemplate.html());
-            //            }
-
-            //            $('.progress .progress-bar').progressbar({ display_text: 'center', percent_format: function (p) { return p + '%'; } });
-
-            //            var votingInteract = {
-            //                "VotingId": $('#txt-voting-id').val()
-            //            };
-            //            var listVotingInteract = JSON.parse(localStorage.getItem("listVotingInteract"));
-            //            if (listVotingInteract != null) {
-            //                listVotingInteract.push(votingInteract);
-            //                localStorage.setItem("listVotingInteract", JSON.stringify(listVotingInteract));
-            //            }
-            //            else {
-            //                var listVotingInteractNew = [];
-            //                listVotingInteractNew.push(votingInteract);
-            //                localStorage.setItem("listVotingInteract", JSON.stringify(listVotingInteractNew));
-            //            }
-            //        });
-            //    },
-            //    error: function (data) {
-            //        console.log(data);
-            //    }
-            //});
+  
 
         });
 
@@ -190,8 +150,12 @@
                         };
                         var listVotingInteract = JSON.parse(localStorage.getItem("listVotingInteract"));
                         if (listVotingInteract != null) {
-                            listVotingInteract.push(votingInteract);
-                            localStorage.setItem("listVotingInteract", JSON.stringify(listVotingInteract));
+                            var votingTmp = listVotingInteract.find(v => v.VotingId === parseInt($('#txt-voting-id').val()));
+                            if (votingTmp == null) {
+                                listVotingInteract.push(votingInteract);
+                                localStorage.setItem("listVotingInteract", JSON.stringify(listVotingInteract));
+                            }
+                            
                         }
                         else {
                             var listVotingInteractNew = [];
