--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -189,7 +189,7 @@
 
              //Filestack dùng để up hình
              // Set up the picker
-             const client = filestack.init('AIA0Qk3iTSGzr9dIsuPdgz');
+             const client = filestack.init('A1Qbc4el1RCG9gRgLf4Zcz');
              const options = {
                  onUploadDone: updateForm,
                  maxSize: 10 * 1024 * 1024,
