--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Add.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Events/Add.cshtml
@@ -216,9 +216,6 @@
                                     $('#errrorCodeAddExist').css('display', 'block');
                                 }
                             }
-
-
-
                         },
                         error: function (data) {
                             console.log(data);
@@ -236,7 +233,7 @@
 
             //Filestack dùng để up hình
             // Set up the picker
-            const client = filestack.init('AR6JpPavASZ2lDWwopoMNz');
+            const client = filestack.init('A1Qbc4el1RCG9gRgLf4Zcz');
             const options = {
                 onUploadDone: updateForm,
                 maxSize: 10 * 1024 * 1024,
