--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -163,7 +163,7 @@
                 var name = $('#txtName').val();
                 var address = $('#txtAddress').val();
                 //var description = $('textarea.txtDescription').val();
-                var description = CKEDITOR.instances.txtDescription.document.getBody().getText();
+                var description = CKEDITOR.instances.txtDescription.document.getBody().getHtml().toString();
                 var imageUrl = $('#txtBannerImage').attr('src');
                 var codeLogin = $('#txtLoginCode').val();
                 var longitude = $('#txtLng').val();
@@ -310,7 +310,7 @@
 
         //Filestack dùng để up hình
         // Set up the picker
-        const client = filestack.init('AR6JpPavASZ2lDWwopoMNz');
+        const client = filestack.init('A1Qbc4el1RCG9gRgLf4Zcz');
         const options = {
             onUploadDone: updateForm,
             maxSize: 10 * 1024 * 1024,
