--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Content/CustomCss/speaker.css
@@ -4,7 +4,7 @@
 }
 
 .box-speaker-shadow {
-    box-shadow: 5px 10px 20px 7px #888888;
+    /*box-shadow: 5px 10px 20px 7px #888888;*/
     margin-left: 5px;
     margin-top: 5px;
     margin-right: 5px;
@@ -17,13 +17,20 @@
     }
 
     .box-speaker-shadow {
-        box-shadow: 5px 10px 20px 7px #888888;
+        /*box-shadow: 5px 10px 20px 7px #888888;*/
     }
     .modal-speaker {
         margin-top:70px;
     }
 }
-
+.div-author {
+    /*width: 100%;*/
+    /*height: 0;*/
+    padding-top: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center center;
+}
 .collection-empty-title {
     margin-top:20px;
     text-align:center;
