--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/CollectionItem.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/ManageEvent/CollectionItem.cshtml
@@ -15,7 +15,7 @@
             <div class="row">
                 <h2 class="col-sm-10">Quản lý @(Model.Name.ToLower())</h2>
                 <div class="col-sm-2">
-                    <button class="btn btn-custom" type="submit" data-toggle="modal" data-target="#collectionItemAddModal" style="margin-top:20px" onclick="clearModal()">
+                    <button class="btn btn-custom" type="submit" data-toggle="modal" data-target="#collectionItemEditModal" style="margin-top:20px" onclick="clearModal()">
                         <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
@@ -230,7 +230,9 @@
                     {
                         name: "Function",
                         render: function (data, type, row) {
-                            return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#collectionItemEditModal" onclick="showModalSpeaker(' + row.CollectionItemID + ',\'' + row.Name + '\', \'' + row.Description + '\', \'' + row.ImageUrl + '\')"><i class="fa fa-pencil"></i></button>     ' +
+                            var trueDescription = row.Description.replace(new RegExp(/[\n]/, 'g'), '\n').trim();
+
+                            return `<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#collectionItemEditModal" onclick="showModalSpeaker(${row.CollectionItemID}, '${row.Name}', \`${trueDescription}\`, '${row.ImageUrl}')"><i class="fa fa-pencil"></i></button>` +
                                 '<button class="btn btn-danger btn-sm speaker-id" onclick="delCollectionItem(' + row.CollectionItemID + ')"><i class="fa fa-trash"></i></button>';
                         }
                     }
