--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -180,7 +180,8 @@
                     {
                         name: "Function",
                         render: function (data, type, row) {
-                            return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#speakerModal" onclick="showModalSpeaker(' + row.collectionItemID + ',\'' + row.name + '\', \'' + row.description + '\', \'' + row.imageUrl + '\')"><i class="fa fa-pencil"></i></button>     ' +
+                            var trueDescription = row.description.replace(new RegExp(/[\n]/, 'g'), '<br/>');
+                            return `<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#speakerModal" onclick="showModalSpeaker(${row.collectionItemID}, ${row.name}, ${trueDescription}, ${row.imageUrl}')"><i class="fa fa-pencil"></i></button>` +
                                 '<button class="btn btn-danger btn-sm speaker-id"  onclick="delSpeaker(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
                         }
                     }
