--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Voting/Index.cshtml
@@ -14,12 +14,12 @@
 <div class="container" >
     <div class="row" style="padding-top: 74px;">
         <div class="col-md-12 text-center voting-title">
-            <h3>Bình chọn</h3>
+            <h3>Khảo sát</h3>
         </div>
     </div>
     @if (Model == null)
     {
-        <h3 class="text-center">Hiện tại chúng tôi chưa tiến hành bình chọn</h3>
+        <h3 class="text-center">Hiện tại chúng tôi chưa tiến hành khảo sát</h3>
     }
     else
     {
@@ -32,7 +32,6 @@
                         </div>
                         <div class="panel-body">
                             @{
-                                //int i = 1;
                                 for (int i = 0; i < Model.VotingOptions.Count(); i++)
                                 {
                                     <div class="radio">
@@ -50,9 +49,7 @@
                         </div>
                         <div id="result" class="panel-body result">
                             <h5 class="text-danger">Kết quả người dùng bình chọn :</h5>
-                            @*<input id="votingQuestionId" type="hidden" value="@(listQuestionOptions.FirstOrDefault().VotingQuestionId)" />*@
                             <div id="result-voting-section">
-
                             </div>
                         </div>
                     </div>
@@ -60,7 +57,6 @@
             </div>
         </div>
     }
-
 </div>
 
 <input type="hidden" id="txt-voting-id" value="@(Model != null ? Model.VotingId : 0)" />
