[Admin] Fix some bug [Client] fix response - layout - collection layout about sponor and speaker

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Edit.cshtml
@@ -221,7 +221,7 @@
                         Longitude: longitude,
                         Latitude: lattitude,
                         BriefName: briefName,
-                        IsLandingPage: $('#')
+                        IsLandingPage: $('#ckIsLandingPage')
 
                     },
                     success: function (data) {
