--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -25,7 +25,8 @@ else
                 <div class="col-md-4 col-sm-6 col-12" onclick="showModalSpeaker('@(speaker.Name)', '@(speaker.Description)', '@(speaker.ImageUrl)')">
                     <div class="box-speaker-shadow">
                         <a href="" data-toggle="modal" data-target="#speakerModal">
-                            <img class="img-fluid image-speaker-custom" src="@(speaker.ImageUrl)" alt="brand">
+                            <div class="" style="background-image: url(@speaker.ImageUrl);background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+                            @*<img class="img-fluid image-speaker-custom" src="@(speaker.ImageUrl)" alt="brand">*@
                         </a>
                         <div class="item-title">
                             <h3 class="title title-medium" style="text-align:center">
