[Client] fix live stream

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
@@ -14,8 +14,19 @@
 {
     if (Model.LivestreamUrl != null)
     {
-        <div class="videoWrapper" style="padding-top: 64px;">
-            <iframe id="frameLivestream" @*style="width:100%; height:100%;"*@ width="100%" height="100%" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.2';
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+        <div class="videoWrapper" style="width:100%;position:center;padding:20px 20px;">
+            <div class="fb-video" data-href="@Model.LivestreamUrl" data-width="4000"
+                 data-show-text="false" data-autoplay="true" data-allowfullscreen="true">
+              
+            </div>
         </div>
     }
     else
